--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'net.minecraftforge.gradle'
 
 
 version = '1.0'
-group = 'com.butday.utopia' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'io.github.poisonsheep' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'utopia'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
